<resources>
    <string name="app_name">Saving Money</string>
    <string name="budget_list">Budget List</string>
    <string name="error_message">Something went wrong, please try again</string>
    <string name="first_month">first month %s</string>
    <string name="last_month">last month %s</string>
    <string name="date_format">date: %s</string>
    <string name="type_format">type: %s</string>
    <string name="balance_format">balance: %s</string>
    <string name="account_list">Account List</string>
    <string name="add_account">Add Account</string>
    <string name="name">Name</string>
    <string name="account_name">account name</string>
    <string name="account_type">account type</string>
    <string name="account_balance">account balance</string>
    <string name="add_button">Add</string>
    <string name="account_successfully_added">account successfully added</string>
</resources>