<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.account_list.view.AccountListActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar_container"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryLight"
            android:paddingTop="15dp"
            android:paddingBottom="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/back_arrow_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:paddingEnd="0dp"
                android:paddingBottom="4dp"
                android:src="@drawable/ic_back_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@android:color/white" />

            <TextView
                style="@style/toolbar_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/add_account"
                android:textAlignment="viewStart"
                app:layout_constraintBottom_toBottomOf="@+id/back_arrow_image_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/back_arrow_image_view"
                app:layout_constraintTop_toTopOf="@+id/back_arrow_image_view" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/account_name_edit_text"
            style="@style/form_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/account_name"
            android:imeOptions="actionNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_container" />

        <TextView
            android:id="@+id/account_type_text_view"
            style="@style/form_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/account_type"
            app:layout_constraintEnd_toEndOf="@id/account_name_edit_text"
            app:layout_constraintStart_toStartOf="@id/account_name_edit_text"
            app:layout_constraintTop_toBottomOf="@id/account_name_edit_text" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_arrow"
            app:layout_constraintBottom_toBottomOf="@id/account_type_text_view"
            app:layout_constraintEnd_toEndOf="@id/account_type_text_view"
            app:layout_constraintTop_toTopOf="@id/account_type_text_view" />

        <EditText
            android:id="@+id/account_balance_edit_text"
            style="@style/form_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/account_balance"
            android:imeOptions="actionDone"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/account_type_text_view" />

        <Button
            android:id="@+id/add_button"
            style="@style/submit_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/submit_button_selector"
            android:enabled="true"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:stateListAnimator="@null"
            android:text="@string/add_button"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
